--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
+body {
+ background-image: linear-gradient(#49F2C2, #00BD87);
+}
+
 .App {
   text-align: center;
+  color: #00291D;
 }
 
 .icon-cart {
   max-width: 40px;
+}
+
+button:hover {
+  background-color: #22705A;
+  border: 2px solid #00291D;
+}
+
+button {
+  background-color: #00BD87;
+  padding: 8px;
+  border-radius: 25%;
+  cursor: pointer;
 }
