--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,24 @@
-.App {
-  text-align: center;
+#home-container {
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+#categories {
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  justify-content: flex-start;
+  padding: 20px ;
+  margin: 20px;
+  border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+#produtcs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.category {
+  margin: 15px 0;
 }
