--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,28 @@
-.App {
-  text-align: center;
+.search-conteiner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+.product-conteiner {
+  border: solid gray 2px;
+  border-radius: 10px;
+  width: 200px;
+  height: 400px;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.title-product {
+  background-color: cadetblue;
+  font-size: small;
+  align-self: initial;
 }
 
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.image-product{
+  width:100%;
+  align-self: center;
+}
+.price-product {
+  align-self: center;
 }
