--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,21 +1,21 @@
-#home-container {
+.home-container {
   display: flex;
   justify-content: space-between;
 }
 
-#categories {
+.categories {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 20px ;
   margin: 20px;
-  border: 1px solid black;
+  padding: 20px;
 }
 
-#produtcs {
+.produtcs {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
 }
 
