--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+.content-container {
   display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  justify-content: space-around;
+  padding: 2%;
 }
 
-.App-link {
-  color: #61dafb;
+.search-and-products {
+  order: 1;
 }
 
-@keyframes App-logo-spin {
+.searchbar-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 1%;
+  width: 500px;
 
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
 
-.shopping-cart {
-  margin-top: 1%;
+.searchbar {
+  border: 1px black solid;
+  border-radius: 5px;
+  width: 90%;
+}
+
+.shopping-cart-image {
   width: 25px;
+}
+
+.category-box {
+  border: 1px solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-flow: column wrap;
+  margin-left: 10px;
+  padding: 2%;
+  width: 200px;
+}
+
+.category {
+  margin-top: 8px;
 }
