--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
     transform: rotate(360deg);
   }
 }
+
+.cart-button-container {
+  display: flex;
+}
+.shopping-cart-img {
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  width: 50px;
+}
