Fix Update project

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ button {
   margin: 3px;
 }
 
- #cart-image {
-   width: 100px;
-   height: 100px;
- }
+/* #cart-image {
+  height: 100px;
+  width: 100px;
+} */
