--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -1,24 +1,24 @@
-#search-bar {
+header {
+  display: flex;
+
   /* border: 1px solid #333; */
   margin-top: 1rem;
-  
-  display: flex;
 }
 
-#search-bar label {
+header label {
   font-size: 1.3rem;
 }
 
-#search-bar input {
-  margin: 0 1rem;
-  height: 100%;
+header input {
   border-radius: 4px;
+  height: 100%;
+  margin: 0 1rem;
 }
 
-#search-bar button {
+header button {
   background-color: #333;
-  color: white;
   border: 1px solid #333;
-  padding: 0.4rem;
   border-radius: 4px;
+  color: white;
+  padding: 0.4rem;
 }
