--- a/src/global.css
+++ b/src/global.css
@@ -1,31 +1,31 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 
-@media (max-width: 1080px) {
+@media ( max-width : 1080px ) {
+
   html {
     font-size: 93.75%;
   }
+
 }
 
-@media (max-width: 720px) {
+@media ( max-width : 720px ) {
+
   html {
     font-size: 87.5%;
   }
 }
 
 body {
-  background: #f5f5f5;
+  background: whitesmoke;
 }
 
-body,
-input,
-textarea,
-button {
-  font: 400 1rem 'Roboto', sans-serif;
+body, input, textarea, button {
+  font: 400 1rem Roboto , sans-serif;
 }
 
 button {
