fix: style:lint issues

--- a/src/components/styles/ProductList.css
+++ b/src/components/styles/ProductList.css
@@ -1,6 +1,6 @@
-#product-list {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 80%;
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 80%;
 }
