--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,43 @@ body {
   cursor: pointer;
   margin-top: 10px;
 }
+
+.product-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 48px 30px;
+}
+
+.product-card {
+  align-items: center;
+  background-color: rgb(235, 235, 235);
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 3px;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  justify-content: center;
+  margin: 5px;
+  max-width: 100%;
+  overflow: hidden;
+  padding: 20px;
+  transition: all 0.3s;
+  width: 300px;
+}
+
+.product-card:hover {
+  background-color: white;
+  box-shadow: 2px 2px 10px black;
+}
+
+.product-card img {
+  max-height: 150px;
+  max-width: 150px;
+}
+
+.product-card h1 {
+  font-size: 10px;
+}
