--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(#49f2c2, #00bd87);
+  background-image: linear-gradient(#5afacd, #00ffb7);
 }
 
 .App {
@@ -14,7 +14,7 @@ body {
 
 button {
   background-color: #00bd87;
-  border-radius: 25%;
+  border-radius: 20px;
   cursor: pointer;
   padding: 8px;
 }
@@ -22,4 +22,78 @@ button {
 button:hover {
   background-color: #22705a;
   border: 2px solid #00291d;
+}
+
+.searchInput {
+  border-radius: 10px;
+  padding: 4px;
+  width: 70%;
+  margin: 5px;
+}
+
+p {
+  margin-top: 2px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.productList {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.products {
+  border: solid 2px #39a385;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin: 4px;
+  padding: 10px;
+  width: 300px;
+}
+
+.div-checkout {
+  text-align: justify;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.div-review-order {
+  margin: 10px 2px;
+  padding: 5px 10px;
+  border: 2px solid grey;
+}
+
+.quantity-order {
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.form-checkout {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-checkout div {
+  width: 100%;
+  margin: 5px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-checkout div input {
+  padding: 5px 3px;
+  border: 0.5px solid grey;
+  border-radius: 5px;
+  margin-right: 3px;
+}
+
+.form-checkout div input:nth-of-type(1) {
+  flex-grow: 1;
 }
