--- a/src/styles/FrontPage.css
+++ b/src/styles/FrontPage.css
@@ -8,6 +8,12 @@
   order: 1;
 }
 
+.search-and-phrase {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .searchbar-container {
   display: flex;
   justify-content: space-between;
@@ -16,14 +22,26 @@
 
 }
 
+.search-button {
+  background-color: rgb(41, 167, 29);
+  border: 2px solid rgba(17, 17, 17, 0.932);
+  border-radius: 10px 0 0 10px;
+  border-right: none;
+  color: white;
+  font-size: 13pt;
+  padding: 10px;
+}
+
 .searchbar {
-  border: 1px black solid;
-  border-radius: 5px;
+  border: 2px solid rgba(17, 17, 17, 0.932);
+  border-radius: 0 10px 10px 0;
   width: 90%;
 }
 
 .shopping-cart-image {
-  width: 25px;
+  margin-left: 5px;
+  margin-top: 5px;
+  width: 38px;
 }
 
 .category-box {
@@ -31,6 +49,7 @@
   border-radius: 10px;
   display: flex;
   flex-flow: column wrap;
+  height: fit-content;
   margin-left: 10px;
   padding: 2%;
   width: 200px;
