--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -1,11 +1,16 @@
+.product-box {
+  display: flex;
+  flex-direction: column;
+  width: 22%;
+}
+
 .product {
-  border: 1px solid rgba(59, 59, 59, 0.459);
-  border-radius: 10px;
+  border: 2px solid rgba(59, 59, 59, 0.459);
+  border-radius: 10px 10px 0 0;
   font-size: 10pt;
   height: 300px;
   margin-top: 10px;
   padding: 10px;
-  width: 200px;
 }
 
 .product-detail-link {
