--- a/src/App.css
+++ b/src/App.css
@@ -122,9 +122,23 @@ body {
   width: 150px;
 }
 
+.addToCard {
+  background-color: #3bc18c;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  height: 30px;
+  margin-top: 10px;
+  width: 150px;
+}
+
+.addToCard:hover {
+  background-color: #7dcead;
+}
+
 .btn-details:hover {
   background-color: #7dcead;
-
 }
 
 .btn-details a {
@@ -149,4 +163,27 @@ body {
 .productDetails img {
   margin-left: 190px;
   width: 100px;
+}
+
+.cart-item-container {
+  background-color: rgb(235, 235, 235);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 50px;
+  max-width: 600px;
+  padding: 20px;
+  transition: all 0.3s;
+}
+
+.cart-item-container:hover {
+  background-color: white;
+  box-shadow: 2px 2px 10px black;
+}
+
+.image-cart {
+  width: 100px;
+}
+
+.item-cart {
+  padding-left: 10px;
 }
