--- a/src/App.css
+++ b/src/App.css
@@ -1,189 +1,42 @@
-* {
-  list-style: none;
-  text-decoration: none;
-}
-
-*:focus {
-  outline: none;
-}
-
-body {
-  align-items: center;
-  display: flex;
-  font-family: sans-serif;
-  justify-content: center;
+.App {
   text-align: center;
 }
 
-
-.home-initial-message {
-  border: solid black 1.2px;
-  border-radius: 20px;
-  margin-top: 10px;
-  padding: 5px;
-  width: 700px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.container-searchBar {
+@media ( prefers-reduced-motion : no-preference ) {
+
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+
+}
+
+.App-header {
   align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.cart {
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-.bars {
-  left: 230px;
-  margin-top: 15px;
-  position: absolute;
-}
-
-.btn-search {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-
-.home {
-  display: flex;
-  flex-direction: column;
-}
-
-.product-list {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  padding: 48px 30px;
-}
-
-.product-card {
-  align-items: center;
-  background-color: rgb(235, 235, 235);
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 3px;
-  color: black;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  height: 300px;
-  justify-content: center;
-  margin: 5px;
-  max-width: 100%;
-  overflow: hidden;
-  padding: 20px;
-  transition: all 0.3s;
-  width: 200px;
-}
-
-.product-card:hover {
-  background-color: white;
-  box-shadow: 2px 2px 10px black;
-}
-
-.product-card img {
-  max-height: 150px;
-  max-width: 150px;
-}
-
-.product-card h1 {
-  font-size: 10px;
-}
-
-.category-buttons {
-  display: flex;
-  flex-direction: column;
-  left: 30px;
-  margin-top: 10px;
-  padding: 20px;
-  position: absolute;
-  width: 200px;
-}
-
-.category {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.category:hover {
-  background-color: #3bc18c;
-}
-
-.btn-details {
-  background-color: #3bc18c;
-  border: none;
-  border-radius: 10px;
-  height: 30px;
-  width: 150px;
-}
-
-.addToCard {
-  background-color: #3bc18c;
-  border: none;
-  border-radius: 10px;
+  background-color: #282c34;
   color: white;
-  cursor: pointer;
-  height: 30px;
-  margin-top: 10px;
-  width: 150px;
-}
-
-.addToCard:hover {
-  background-color: #7dcead;
-}
-
-.btn-details:hover {
-  background-color: #7dcead;
-}
-
-.btn-details a {
-  color: white;
-}
-
-.productDetails {
-  background-color: rgb(235, 235, 235);
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
-  padding: 20px;
-  transition: all 0.3s;
+  font-size: calc(10px + 2vmin);
+  justify-content: center;
+  min-height: 100vh;
 }
 
-.productDetails:hover {
-  background-color: white;
-  box-shadow: 2px 2px 10px black;
+.App-link {
+  color: #61dafb;
 }
 
-.productDetails img {
-  margin-left: 190px;
-  width: 100px;
-}
+@keyframes App-logo-spin {
 
-.cart-item-container {
-  background-color: rgb(235, 235, 235);
-  border-radius: 10px;
-  display: flex;
-  margin-top: 50px;
-  max-width: 600px;
-  padding: 20px;
-  transition: all 0.3s;
-}
+  from {
+    transform: rotate(0deg);
+  }
 
-.cart-item-container:hover {
-  background-color: white;
-  box-shadow: 2px 2px 10px black;
-}
-
-.image-cart {
-  width: 100px;
-}
-
-.item-cart {
-  padding-left: 10px;
+  to {
+    transform: rotate(360deg);
+  }
 }
