--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -25,7 +25,15 @@
 }
 
 .shopping-cart {
-  width: 30px;
+  width: 50px;
+  height: 30px;
+}
+
+.shopping-cart-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 300px;
 }
 
 .back {
