--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-.App {
+body {
   text-align: center;
+}
+
+aside {
+  text-align: left;
+  padding-left: 10px;
+}
+
+ul {
+  list-style-type: none;
 }
