--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,28 @@
+* {
+  padding: 0%;
+}
+
+body {
+  background-color: rgb(240,230,140);
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px;
+  list-style:none
+}
+
+a {
+  text-decoration: none;
+}
+
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  height: 100%;
+  background-color: rgb(240,230,140);
 }
 
 .product-card {
@@ -9,16 +30,71 @@
   border: 1px solid black;
   display: flex;
   flex-direction: column;
-  height: 300px;
-  margin: 10px;
-  width: 300px;
+  margin-top: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
+  padding: 15px;
 }
 
 .card-text {
   width: 200px;
+  text-decoration: none;
 }
 
 .card-img {
-  height: 150px;
+  height: 100px;
   text-align: center;
+}
+
+.form {
+  padding: 20px;
+  background-color: rgb(169,229,88);
+}
+
+.form input {
+  width: 30%;
+  padding: 5px;
+}
+
+.form button {
+  margin-left: 10px;
+  width: 70px;
+  padding: 0%;
+}
+
+
+button {
+  padding: 10px;
+  margin: 10px;
+}
+
+.cart {
+  margin-left: 20px;
+  height: 100%;
+  width: 40px;
+}
+
+.product-details {
+  padding: 20px;
+  font-size: 20px;
+  background-color: rgb(240,230,140);
+}
+
+.link {
+  margin-left: 100px;
+  font-size: 25px;
+}
+
+.bt {
+  margin-top: 40px;
+}
+
+.color {
+  display: flex;
+  background-color: rgb(240,230,140);
+  height: 100%;
+}
+
+.main {
+  font-size: 25px;
 }
