--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,10 +11,19 @@
   --text-color-black-600: rgb(51, 51, 51);
 
   --text-color-black-400: rgb(102, 102, 102);
+
+  --orange-color-600: rgb(228, 102, 68);
+
+  --black-color-600: rgb(47, 43, 51);
+
+  --black-color-400: rgb(71, 70, 77);
+
+  --red-color-600: rgb(224, 56, 56); 
 }
 
 body {
   background-color: rgb(240, 242, 245);
+  font-family: Poppins, sans-serif;
 }
 
 h1, h3, h4, h5, h6 {
