--- a/src/components/CartItem/styles.module.css
+++ b/src/components/CartItem/styles.module.css
@@ -1,3 +1,59 @@
-body {
-  color: inherit;
+.CartItemContainer {
+  display: flex;  
+  background: rgba(255, 255, 255, 0.679);
+  border: 1px solid rgba(0, 0, 0, 0.056);
+  color: var(--text-color-black-400);
+  letter-spacing: 0.5px;
+  border-radius: 8px;
+  height: 7rem;
+}
+
+.CartImageContainer {
+  display: flex;
+  flex-basis: 30%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.CartImageContainer > img {
+  max-width: 85%;
+  max-height: 85%;
+}
+
+.CartInfoContainer {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  flex-basis: 70%;
+  font-size: 0.83rem;
+  padding: 0.4rem;
+}
+
+.CartInfoContainer > p {
+  max-width: 96%;
+}
+
+.CartPriceQuantContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.CartPriceQuantContainer > p {
+  font-size: 1rem;
+  color: var(--text-color-black-600);
+}
+
+.CartPriceQuantContainer > div {
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
+}
+
+.CartPriceQuantContainer > div > button {
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 0.3rem;
+  font-size: 1rem;
 }
