--- a/src/styles/FrontPage.css
+++ b/src/styles/FrontPage.css
@@ -19,7 +19,6 @@
   justify-content: space-between;
   padding: 1%;
   width: 500px;
-
 }
 
 .search-button {
@@ -63,4 +62,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  text-align: center;
 }
