--- a/src/components/CartItem/styles.module.css
+++ b/src/components/CartItem/styles.module.css
@@ -1,32 +1,33 @@
 .CartItemContainer {
-  display: flex;  
   background: rgba(255, 255, 255, 0.679);
-  border: 1px solid rgba(0, 0, 0, 0.056);
-  color: var(--text-color-black-400);
-  letter-spacing: 0.5px;
+  border: 1px solid rgba(47, 43, 51, 0.226);
   border-radius: 8px;
+  color: var(--text-color-black-400);
+  display: flex;
   height: 7rem;
+  letter-spacing: 0.5px;
+  width: 100%;
 }
 
 .CartImageContainer {
+  align-items: center;
   display: flex;
   flex-basis: 30%;
   height: 100%;
   justify-content: center;
-  align-items: center;
 }
 
 .CartImageContainer > img {
-  max-width: 85%;
   max-height: 85%;
+  max-width: 85%;
 }
 
 .CartInfoContainer {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
   flex-basis: 70%;
+  flex-flow: column nowrap;
   font-size: 0.83rem;
+  justify-content: space-between;
   padding: 0.4rem;
 }
 
@@ -40,20 +41,24 @@
 }
 
 .CartPriceQuantContainer > p {
+  color: var(--red-color-600);
   font-size: 1rem;
-  color: var(--text-color-black-600);
 }
 
 .CartPriceQuantContainer > div {
+  align-items: center;
   display: flex;
   gap: 0.4rem;
-  align-items: center;
 }
 
 .CartPriceQuantContainer > div > button {
-  border: none;
-  outline: none;
   background: transparent;
-  padding: 0.3rem;
+  border: none;
   font-size: 1rem;
+  outline: none;
+  padding: 0.3rem;
+}
+
+.CartPriceQuantContainer > div > button:disabled {
+  opacity: 30%;
 }
