--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,16 +15,24 @@
   --orange-color-600: rgb(228, 104, 69);
 
   --black-color-600: rgb(47, 43, 51);
-  
+
   --black-color-400: rgb(71, 70, 77);
 
   --red-color-600: rgb(224, 56, 56);
+
+  --green-color-600: rgb(75, 181, 67);
+}
+
+a {
+  color: inherit;
+  outline: 0;
+  text-decoration: inherit;
 }
 
 body {
   background-color: rgb(240, 242, 245);
   color: var(--text-color-black-800);
-  font-family: Poppins, sans-serif;
+  font-family: Poppins , sans-serif;
 }
 
 h1, h3, h4, h5, h6 {
