--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,8 @@
   --black-color-400: rgb(71, 70, 77);
 
   --red-color-600: rgb(224, 56, 56);
+
+  --green-color-600: rgb(75,181,67);
 }
 
 body {
