--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -29,12 +29,21 @@ body {
     border-radius: 5px;
     color: var(--orange-color-600);
     text-decoration: none;
-    width: 35px;
+    width: 40px;
+    position: relative;
   }
 
   .lengthCart {
-    color: var(--red-color-600);
+    border-radius: 50%;
+    color: white;
+    display: block;
+    font-size: 1rem;
+    height: 20px;
     position: absolute;
+    right: -15%;
+    text-align: center;
+    top: 54%;
+    width: 20px;
   }
 
   .iconCart {
@@ -65,12 +74,9 @@ body {
     transition: 0.7s;
   }
 
-  .inputSearch:focus {
-    box-shadow: 0 0 1rem rgb(224 56 56 / 60%);
-  }
-
   .btnSearch {
     border: none;
+    opacity: 0.77;
     margin-top: 6px;
     position: absolute;
     right: 11%;
@@ -99,7 +105,7 @@ body {
     background-color: var(--orange-color-600);
     border: none;
     border-radius: 50%;
-    box-shadow: 0 0 1rem rgb(0 0 0 / 60%);
+    box-shadow: 0 0 2rem rgb(224 56 56 / 60%);
     color: white;
     font-family: Poppins , sans-serif;
     font-size: 0.7rem;
@@ -113,8 +119,25 @@ body {
 
   /* produtos da pagina */
   .checkedProduct {
+    color: var(--text-color-black-600);
     font-size: 1.2rem;
+    opacity: 0.9;
     text-align: center;
+    margin-top: 40px;
+  }
+
+  .contentProductempty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .boxEmpty {
+    align-self: center;
+    color: var(--text-color-black-400);
+    height: 200px;
+    opacity: 0.8;
+    width: 200px;
   }
 
   .contentProducts {
@@ -133,5 +156,195 @@ body {
   .productsItems {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  /* Detalhes do produto */
+  .pageHeader {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.192);
+    width: 100%;
+    padding: 10px;
+    position: absolute;
+    z-index: 999;
+  }
+
+  .iconArrow {
+    color: var(--orange-color-600);
+    width: 30px;
+    height: 30px;
+  }
+
+  .iconCartDetails {
+    color: var(--orange-color-600);
+    width: 28px;
+    height: 28px;
+  }
+
+  .contentProductDetails {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contentImg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .imgProduct {
+    overflow: scroll;
+    background-size: cover;
+    z-index: 1;
+    position: relative;
+    top: 0;
+  }
+
+  .titleDetails {
+    color: var(--text-color-black-400);
+    text-align: center;
+    padding: 10px;
+  }
+
+  .priceProductDetails {
+    color: var(--red-color-600);
+  }
+
+  .contentPriceFree {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+  .titleFrete {
+    color: var(--green-color-600);
+    font-size: 0.8rem;
+    position: absolute;
+    top: -65px;
+    right: 15px;
+  }
+
+  .iconBoxFrete {
+    color: var(--green-color-600);
+    position: absolute;
+    top: -52px;
+    right: 35px;
+    height: 30px;
+    width: 30px;
+  }
+
+  .btnAddCartProduct {
+    align-self: center;
+    border: none;
+    font-size: 0.8rem;
+    border-radius: 10px;
+    background-color: var(--green-color-600);
+    color: white;
+    padding: 0.4rem;
+    width: 138px;
+  }
+
+  .btnSub {
+    margin-left: 10px;
+    color: var(--red-color-600);
+    align-self: center;
+    font-size: 1.1rem;
+    width: 20px;
+    height: 20px;
+    border: none;
+  }
+
+  .btnAdd {
+    margin-right: 10px;
+    font-size: 1.1rem;
+    color: var(--green-color-600);
+    align-self: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+  }
+
+  .addQuantProductToCart {
+    align-self: center;
+    font-size: 1rem;
+    margin: 0 5px;
+  }
+
+  .quantStock {
+    color: var(--text-color-black-400);
+    font-size: 0.65rem;
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  /* Formulario de avaliação */
+  .contentOpition {
+    margin: 20px 0;
+    border-radius: 35px;
+    box-shadow: 0 -5px 10px 2px rgba(160, 160, 160, 0.835);
+    background-color: var(--black-color-400);
+  }
+
+  .contentFrom {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .titleOption {
+    color: var(--orange-color-600);
+    text-align: center;
+    padding: 0.8rem;
+    font-size: 1.5rem;
+  }
+
+  .inputOption {
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 0.9rem;
+    outline: none;
+    border: 1px solid var(--orange-color-600);
+    margin: 10px auto;
+    width: 90%;
+  }
+
+  .contentStar{
+    margin: 10px auto;
+    width: 90%;
+    color: white;
+  }
+
+  .contentTextOption {
+    border: 1px solid var(--orange-color-600);
+    outline: none;
+    margin: 10px auto;
+    border-radius: 10px;
+    font-size: 0.9rem;
+    padding: 0.5rem;
+    width: 90%;
+  }
+
+  .btnOptionSubmit {
+    background-color: var(--green-color-600);
+    border: none;
+    padding: 0.3rem;
+    color: white;
+    margin: 10px 0;
+    font-size: 0.9rem;
+    border-radius: 10px;
+    align-self: center;
+    width: 150px;
+  }
+
+  .contentComentOption {
+    text-align: center;
+    color: white;
+    margin: 30px 0;
+  }
+
+  .hrFrom {
+    width: 60%;
+    margin: 10px auto;
   }
 }
