--- a/src/components/CardProduct/styles.module.css
+++ b/src/components/CardProduct/styles.module.css
@@ -8,6 +8,7 @@ body {
   .content {
     border: 3px solid var(--black-color-600);
     border-radius: 10px;
+    box-shadow: -5px 5px 5px 0 rgb(93, 92, 92);
     display: flex;
     flex-direction: column;
     height: 350px;
@@ -21,9 +22,10 @@ body {
     color: var(--text-color-black-600);
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     font-size: 1.1rem;
     font-weight: 500;
-    text-decoration: none;
+    max-height: 270px;
   }
 
   .priceText {
@@ -33,14 +35,15 @@ body {
   }
 
   .titleProduct {
+    font-size: 0.9rem;
     margin-bottom: 10px;
     padding: 8px;
   }
 
   .imgProduct {
     align-self: center;
-    height: 50%;
-    width: 50%;
+    height: 55%;
+    width: 55%;
   }
 
   .btnAddToCart {
