--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -106,9 +106,9 @@
   .btnCart {
     border-radius: 5px;
     color: var(--orange-color-600);
+    position: relative;
     text-decoration: none;
     width: 40px;
-    position: relative;
   }
 
   .lengthCart {
@@ -154,8 +154,8 @@
 
   .btnSearch {
     border: none;
-    opacity: 0.77;
     margin-top: 6px;
+    opacity: 0.77;
     position: absolute;
     right: 11%;
     width: 34px;
@@ -199,9 +199,9 @@
   .checkedProduct {
     color: var(--text-color-black-600);
     font-size: 1.2rem;
+    margin-top: 40px;
     opacity: 0.9;
     text-align: center;
-    margin-top: 40px;
   }
 
   .contentProductempty {
@@ -238,25 +238,34 @@
 
   /* Detalhes do produto */
   .pageHeader {
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255, 0.192);
-    width: 100%;
     padding: 10px;
-    position: absolute;
+    position: fixed;
+    width: 100%;
     z-index: 999;
   }
 
   .iconArrow {
     color: var(--orange-color-600);
-    width: 30px;
     height: 30px;
+    width: 30px;
   }
 
   .iconCartDetails {
     color: var(--orange-color-600);
-    width: 28px;
     height: 28px;
+    width: 28px;
+  }
+
+  .contCart {
+    color: var(--purple-color-600);
+    font-size: 0.85rem;
+    font-weight: 600;
+    position: absolute;
+    right: 5px;
+    top: 26px;
   }
 
   .contentProductDetails {
@@ -265,23 +274,23 @@
   }
 
   .contentImg {
-    width: 100%;
     display: flex;
     justify-content: center;
+    width: 100%;
   }
 
   .imgProduct {
-    overflow: scroll;
     background-size: cover;
-    z-index: 1;
+    overflow: scroll;
     position: relative;
     top: 0;
+    z-index: 1;
   }
 
   .titleDetails {
     color: var(--text-color-black-400);
-    text-align: center;
     padding: 10px;
+    text-align: center;
   }
 
   .priceProductDetails {
@@ -289,9 +298,9 @@
   }
 
   .contentPriceFree {
-    margin-top: 50px;
     display: flex;
     justify-content: center;
+    margin-top: 50px;
     position: relative;
   }
 
@@ -299,48 +308,48 @@
     color: var(--green-color-600);
     font-size: 0.8rem;
     position: absolute;
-    top: -65px;
     right: 15px;
+    top: -65px;
   }
 
   .iconBoxFrete {
     color: var(--green-color-600);
-    position: absolute;
-    top: -52px;
-    right: 35px;
     height: 30px;
+    position: absolute;
+    right: 35px;
+    top: -52px;
     width: 30px;
   }
 
   .btnAddCartProduct {
     align-self: center;
-    border: none;
-    font-size: 0.8rem;
-    border-radius: 10px;
     background-color: var(--green-color-600);
+    border: none;
+    border-radius: 10px;
     color: white;
+    font-size: 0.8rem;
     padding: 0.4rem;
     width: 138px;
   }
 
   .btnSub {
-    margin-left: 10px;
-    color: var(--red-color-600);
     align-self: center;
-    font-size: 1.1rem;
-    width: 20px;
-    height: 20px;
     border: none;
+    color: var(--red-color-600);
+    font-size: 1.1rem;
+    height: 20px;
+    margin-left: 10px;
+    width: 20px;
   }
 
   .btnAdd {
-    margin-right: 10px;
-    font-size: 1.1rem;
-    color: var(--green-color-600);
     align-self: center;
-    width: 20px;
-    height: 20px;
     border: none;
+    color: var(--green-color-600);
+    font-size: 1.1rem;
+    height: 20px;
+    margin-right: 10px;
+    width: 20px;
   }
 
   .addQuantProductToCart {
@@ -352,16 +361,16 @@
   .quantStock {
     color: var(--text-color-black-400);
     font-size: 0.65rem;
-    text-align: center;
     margin-top: 5px;
+    text-align: center;
   }
 
   /* Formulario de avaliação */
   .contentOpition {
-    margin: 20px 0;
+    background-color: var(--black-color-600);
     border-radius: 35px;
-    box-shadow: 0 -5px 10px 2px rgba(160, 160, 160, 0.835);
-    background-color: var(--black-color-400);
+    box-shadow: 0 -5px 8px 1px rgb(153, 153, 153);
+    margin: 20px 0;
   }
 
   .contentFrom {
@@ -372,57 +381,57 @@
 
   .titleOption {
     color: var(--orange-color-600);
-    text-align: center;
-    padding: 0.8rem;
     font-size: 1.5rem;
+    padding: 0.8rem;
+    text-align: center;
   }
 
   .inputOption {
-    padding: 0.5rem;
+    border: 1px solid var(--orange-color-600);
     border-radius: 10px;
     font-size: 0.9rem;
-    outline: none;
-    border: 1px solid var(--orange-color-600);
     margin: 10px auto;
+    outline: none;
+    padding: 0.5rem;
     width: 90%;
   }
 
-  .contentStar{
+  .contentStar {
+    color: white;
     margin: 10px auto;
     width: 90%;
-    color: white;
   }
 
   .contentTextOption {
     border: 1px solid var(--orange-color-600);
-    outline: none;
-    margin: 10px auto;
     border-radius: 10px;
     font-size: 0.9rem;
+    margin: 10px auto;
+    outline: none;
     padding: 0.5rem;
     width: 90%;
   }
 
   .btnOptionSubmit {
+    align-self: center;
     background-color: var(--green-color-600);
     border: none;
-    padding: 0.3rem;
-    color: white;
-    margin: 10px 0;
-    font-size: 0.9rem;
     border-radius: 10px;
-    align-self: center;
+    color: white;
+    font-size: 0.9rem;
+    margin: 10px 0;
+    padding: 0.3rem;
     width: 150px;
   }
 
   .contentComentOption {
-    text-align: center;
     color: white;
     margin: 30px 0;
+    text-align: center;
   }
 
   .hrFrom {
-    width: 60%;
     margin: 10px auto;
+    width: 60%;
   }
 }
