--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,8 @@
   --red-color-600: rgb(224, 56, 56);
 
   --green-color-600: rgb(75, 181, 67);
+
+  --purple-color-600: rgb(143, 40, 211);
 }
 
 a {
