--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -434,4 +434,173 @@
     margin: 10px auto;
     width: 60%;
   }
+
+  /* checkout syles */
+  .checkoutContainer {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 1rem;
+    padding: 0 2rem 3rem;
+    width: 100%;
+  }
+
+  .checkoutProducts {
+    align-items: center;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 0.4rem;
+    width: 100%;
+  }
+
+  .checkoutTotal {
+    background: rgba(255, 255, 255, 0.679);
+    border-radius: 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    height: 3rem;
+    justify-content: space-between;
+    padding: 0 0.6rem;
+    width: 100%;
+  }
+
+  .checkoutTotal > span {
+    align-self: center;
+    font-size: 1rem;
+  }
+
+  .checkoutProducts > header {
+    align-items: center;
+    background-color: transparent;
+    display: flex;
+    font-size: 1.6rem;
+    justify-content: center;
+    padding: 0.5rem 0 2.5rem;
+    width: 100vw;
+  }
+
+  .checkoutProducts > header > h1 {
+    color: var(--orange-color-600);
+    font-size: 1.6rem;
+  }
+
+  .checkoutProducts > header > a {
+    color: var(--orange-color-600);
+    left: 0;
+    margin: 0.5rem 0 0 0.5rem;
+    position: absolute;
+  }
+
+  .checkoutItemContainer {
+    background: rgba(255, 255, 255, 0.679);
+    border-radius: 10px;
+    color: var(--text-color-black-400);
+    display: flex;
+    flex-direction: row;
+    height: 7rem;
+    padding: 0.2rem 0.5rem;
+    width: 100%;
+  }
+
+  .checkoutImgItem {
+    align-items: center;
+    display: flex;
+    flex-basis: 30%;
+    height: 100%;
+    justify-content: center;
+  }
+
+  .checkoutImgItem > img {
+    max-height: 85%;
+    max-width: 85%;
+  }
+
+  .checkoutInfosItem {
+    flex-basis: 70%;
+    font-size: 0.8rem;
+  }
+
+  .checkoutInfosNumb {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding-top: 2rem;
+  }
+
+  .checkoutItemPrice {
+    color: red;
+  }
+
+  .checkoutInfosItem > p {
+    align-items: flex-end;
+    display: flex;
+    font-size: 96%;
+    padding: 0.2rem;
+  }
+
+  .checkoutCustomerInfos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem 0;
+  }
+
+  .inputInfo {
+    background-color: rgb(240, 242, 245);
+    border: 1px solid rgb(102, 102, 102, 0.2);
+    border-radius: 8px;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem 0.2rem;
+    text-indent: 10px;
+  }
+
+  .checkoutCustomerInfos > form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .checkoutCustomerInfos > h2 {
+    font-size: 1.1rem;
+    padding-bottom: 1rem;
+  }
+
+  .checkoutPayment h2 {
+    font-size: 1.1rem;
+  }
+
+  .inputPaymentRadio {
+    font-size: 1rem;
+  }
+
+  /* tamanho react icon  */
+  .inputLabelRadio {
+    font-size: 1.8rem;
+  }
+
+  /* tamanho label radio */
+  .inputLabelRadio > span {
+    display: flex;
+    font-size: 0.8rem;
+  }
+
+  /* conjunto radio buttons (filedset) */
+  .radioButtons {
+    border: none;
+    display: flex;
+    flex-flow: row-reverse wrap;
+    gap: 1.2rem;
+    justify-content: space-around;
+    padding: 2rem 0;
+  }
+
+  .checkoutContainer > button {
+    background-color: var(--green-color-600);
+    border: none;
+    border-radius: 12px;
+    color: white;
+    font-family: Poppins , sans-serif;
+    font-size: 0.9rem;
+    margin: auto;
+    padding: 0.7rem 0.8rem;
+    width: 65%;
+  }
 }
