--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@ body {
   font-family: Poppins , sans-serif;
 }
 
-h1, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   color: var(--text-color-black-600);
   font-family: Cabin , sans-serif;
   font-size: 2rem;
