--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -457,7 +457,7 @@
     border-radius: 10px;
     display: flex;
     flex-flow: row nowrap;
-    height: 3rem;
+    height: 4rem;
     justify-content: space-between;
     padding: 0 0.6rem;
     width: 100%;
@@ -465,7 +465,8 @@
 
   .checkoutTotal > span {
     align-self: center;
-    font-size: 1rem;
+    color: var(--text-color-black-400);
+    font-size: 1.2rem;
   }
 
   .checkoutProducts > header {
@@ -527,7 +528,7 @@
   }
 
   .checkoutItemPrice {
-    color: red;
+    color: var(--red-color-600);
   }
 
   .checkoutInfosItem > p {
@@ -559,11 +560,13 @@
   }
 
   .checkoutCustomerInfos > h2 {
+    color: var(--text-color-black-400);
     font-size: 1.1rem;
     padding-bottom: 1rem;
   }
 
   .checkoutPayment h2 {
+    color: var(--text-color-black-400);
     font-size: 1.1rem;
   }
 
