--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   width: 80%;
 }
 
+.content {
+  display: flex;
+}
+
+.categories-list {
+  min-width: 180px;
+}
+
 .product-card {
   align-items: center;
   border: 1px solid black;
@@ -21,4 +29,13 @@
 .card-img {
   height: 150px;
   text-align: center;
+}
+
+.rating-input {
+  display: none;
+}
+
+.stars {
+  cursor: pointer;
+  transition: color 200ms;
 }
