--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,12 @@
   display: none;
 }
 
+.comment {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 10px;
+}
+
 .stars {
   cursor: pointer;
   transition: color 200ms;
